# USTH-advancedProg-Thrust

./: .gitignore  README.md
Labwork 1/: README.md
Labwork 1/ex1/: CMakeLists.txt  Exercise.cu  Exercise.hpp
Labwork 1/ex2/: CMakeLists.txt  Exercise.cu  Exercise.hpp
Labwork 2/: CMakeLists.txt  README.md  Student.cu  main.cu
Labwork 3/: CMakeLists.txt  README.md  student.cu
Labwork 4/: CMakeLists.txt  app.cu  student.cu  student.hpp
Project/: .gitignore  CMakeLists.txt  build.sh  main.cu
Project/students/: student1.cu  student2.cu
